--- a/Ex3/docker/Dockerfile.backend
+++ b/Ex3/docker/Dockerfile.backend
@@ -2,9 +2,9 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY backend/requirements.txt .
+COPY ../backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY backend/app.py .
+COPY ../backend/app.py .
 
 CMD ["python", "app.py"]
