--- a/Ex3/docker/Dockerfile.frontend
+++ b/Ex3/docker/Dockerfile.frontend
@@ -1,6 +1,6 @@
 FROM nginx:alpine
 
-COPY frontend/index.html /usr/share/nginx/html/
-COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ../frontend/index.html /usr/share/nginx/html/
+COPY ../frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
