--- a/Ex4/Makefile
+++ b/Ex4/Makefile
@@ -1,7 +1,7 @@
 COMPOSE = docker-compose
 PROJECT_NAME = ex4
 
-.PHONY: all clean fclean re purge-bdd purge-all
+.PHONY: all clean fclean re purge purge-bdd purge-all
 
 all:
 	$(COMPOSE) up -d --build
@@ -17,11 +17,11 @@ re: fclean all
 purge: fclean
 	docker volume prune -a -f	
 
-purge-bdd:
+purge-bdd: clean
 	$(COMPOSE) down -v
 	docker volume rm $(PROJECT_NAME)_postgres_data $(PROJECT_NAME)_pgadmin_data 2>/dev/null || true
 
-purge-all: clean
-	$(COMPOSE) down -v --remove-orphans
+purge-all: purge
+	$(COMPOSE) down --remove-orphans
 	docker system prune -a -f --volumes
 	$(COMPOSE) up -d --build
